bk_ida/gccida/c1/dwarf2out_begin_prologue
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_begin_prologue/src/dwarf2out.c:2531:40: error: use of undeclared identifier 'off_629E39'
sprintf( v7, "*.%s%u", ( const char *)&off_629E39, current_funcdef_number); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_begin_prologue/src/dwarf2out.c:2532:52: error: use of undeclared identifier 'off_629E39'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_629E39, current_funcdef_number); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_begin_prologue/src/dwarf2out.c:2544:12: error: expected expression
*( _OWORD *)&v2[v5].dw_fde_current_label = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_begin_prologue/src/dwarf2out.c:2544:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2[v5].dw_fde_current_label = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_begin_prologue/src/dwarf2out.c:2551:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = 0LL; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_begin_prologue/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_begin_prologue/src/obj/dwarf2out.o] Error 1
